# pure-grpc-rs

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  README.md
.claude/rules/: tdd-workflow.md
.github/workflows/: ci.yml
benchmarks/: Cargo.toml  build.rs
benchmarks/benches/: grpc.rs
benchmarks/fbs/: benchmark.fbs  todo.fbs
benchmarks/proto/: benchmark.proto  todo.proto
benchmarks/src/: lib.rs  pure_grpc_client.rs  pure_grpc_server.rs  tonic_client.rs  tonic_server.rs
docs/: code-quality-findings.md  comparison-with-tonic.md  test-coverage-gaps.md
docs/tonic/: 01-status.md  02-metadata.md  03-request-response.md  04-body.md  05-codec-traits.md  06-encode.md  07-decode.md  08-prost-codec.md  09-server-handler.md  10-service-traits.md  11-client-dispatcher.md  12-router.md  13-channel-endpoint.md  14-server-transport.md  15-tonic-build.md  16-tonic-prost-build.md  index.md
examples/greeter-fbs/: Cargo.toml  build.rs
examples/greeter-fbs/schema/: greeter.fbs
examples/greeter-fbs/src/: client.rs  lib.rs  server.rs
examples/greeter-fbs/tests/: integration.rs
examples/greeter-proto/: Cargo.toml  build.rs
examples/greeter-proto/certs/: ca.crt  generate.sh  server.crt
examples/greeter-proto/proto/: helloworld.proto
examples/greeter-proto/src/: client.rs  lib.rs  server.rs  tls_client.rs  tls_server.rs
examples/greeter-proto/tests/: h3_integration.rs  integration.rs
examples/webtransport-echo/: Cargo.toml  e2e_test.sh
examples/webtransport-echo/e2e/: Dockerfile  package.json  test.mjs
examples/webtransport-echo/src/: server.rs
examples/webtransport-echo/static/: index.html
grpc-build/: Cargo.toml
grpc-build/src/: flatbuffers.rs  lib.rs  protobuf.rs
grpc-build/tests/: dart_integration_test.rs
grpc-client/: Cargo.toml
grpc-client/src/: balance.rs  channel.rs  endpoint.rs  grpc.rs  h3_channel.rs  lib.rs
grpc-codec-flatbuffers/: Cargo.toml
grpc-codec-flatbuffers/src/: lib.rs
grpc-codegen/: Cargo.toml
grpc-codegen/src/: client_gen.rs  dart_client_gen.rs  flatbuffers.rs  ir.rs  lib.rs  protobuf.rs  server_gen.rs  test_util.rs
grpc-core/: Cargo.toml
grpc-core/benches/: codec_bench.rs
grpc-core/src/: body.rs  extensions.rs  http2_config.rs  lib.rs  metadata.rs  request.rs  response.rs  status.rs
grpc-core/src/codec/: buffer.rs  compression.rs  decode.rs  encode.rs  mod.rs  prost_codec.rs  test_helpers.rs
grpc-health/: Cargo.toml
grpc-health/src/: lib.rs
grpc-reflection/: Cargo.toml
grpc-reflection/src/: lib.rs  proto.rs
grpc-server/: Cargo.toml
grpc-server/src/: grpc.rs  h3_server.rs  interceptor.rs  lib.rs  router.rs  server.rs  service.rs
grpc-types/: Cargo.toml  build.rs
grpc-types/proto/: google_rpc_types.proto
grpc-types/src/: any_ext.rs  lib.rs  status_ext.rs
grpc-web/: Cargo.toml
grpc-web/src/: call.rs  layer.rs  lib.rs  service.rs
tonic-bench-server/: Cargo.toml  build.rs
tonic-bench-server/src/: main.rs  todo_main.rs
