[workspace]
resolver = "2"
members = [
    "grpc-core",
    "grpc-server",
    "grpc-client",
    "grpc-codegen",
    "grpc-build",
    "grpc-codec-flatbuffers",
    "grpc-health",
    "grpc-reflection",
    "grpc-types",
    "grpc-web",
    "examples/greeter-proto",
    "examples/greeter-fbs",
    "examples/webtransport-echo",
    "benchmarks",
]
# vendor/tonic is NOT in the workspace — reference only
exclude = ["vendor"]
