[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bench
criterion = { version = "0.5", features = ["html_reports"] }

# Tonic + Protobuf
prost = "0.13"

# pure-grpc-rs crates (for flatbuffers benchmarks)
grpc-build = { path = "../grpc-build" }
grpc-codec-flatbuffers = { path = "../grpc-codec-flatbuffers" }
grpc-core = { path = "../grpc-core" }
flatbuffers = "25"

[build-dependencies]
grpc-build = { path = "../grpc-build", features = ["flatbuffers"] }

[[bench]]
name = "grpc"
harness = false
