[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bench
criterion = { version = "0.5", features = ["html_reports"] }

# Tonic + Protobuf (for load test)
prost = "0.13"
tonic = { version = "0.12", features = ["prost"] }

# pure-grpc-rs crates (for flatbuffers benchmarks)
grpc-build = { path = "../grpc-build" }
grpc-codec-flatbuffers = { path = "../grpc-codec-flatbuffers" }
grpc-core = { path = "../grpc-core" }
grpc-server = { path = "../grpc-server" }
grpc-client = { path = "../grpc-client" }
flatbuffers = "25"
bytes = "1"
tower = "0.4"
tower-service = "0.3"

# HTTP types
http = "1"
http-body = "1"
http-body-util = "0.1"

# Async runtime for load test
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tokio-stream = "0.1"

# CLI args
clap = { version = "4", features = ["derive"] }

# UUID for todo servers
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
grpc-build = { path = "../grpc-build", features = ["flatbuffers"] }
tonic-build = "0.12"

[[bench]]
name = "grpc"
harness = false

[[bin]]
name = "load_test"
path = "bin/load_test.rs"

[[bin]]
name = "prost_todo_server"
path = "bin/prost_todo_server.rs"

[[bin]]
name = "flatbuffers_todo_server"
path = "bin/flatbuffers_todo_server.rs"

[[bin]]
name = "todo_load_test"
path = "bin/todo_load_test.rs"
