[package]
name = "grpc-codec-flatbuffers"
version = "0.1.0"
edition = "2021"
description = "Part of pure-grpc-rs: a pure Rust gRPC framework with pluggable codecs"
repository = "https://github.com/Shuozeli/pure-grpc-rs"
license = "MIT"

[dependencies]
grpc-core = { path = "../grpc-core", version = "0.1.0", default-features = false }
flatbuffers = "25"
bytes = "1"
