[package]
name = "grpc-codegen"
version = "0.1.0"
edition = "2021"
description = "Part of pure-grpc-rs: a pure Rust gRPC framework with pluggable codecs"
repository = "https://github.com/Shuozeli/pure-grpc-rs"
license = "MIT"

[features]
default = ["protobuf"]
protobuf = ["protoc-rs-schema"]
flatbuffers = ["flatc-rs-schema"]

[dependencies]
heck = "0.5"
proc-macro2 = "1"
quote = "1"
syn = "2"
prettyplease = "0.2"

protoc-rs-schema = { git = "https://github.com/shuozeli/protobuf-rs.git", optional = true }
flatc-rs-schema = { git = "https://github.com/shuozeli/flatbuffers-rs.git", optional = true }

[dev-dependencies]
