[package]
name = "grpc-codegen"
version = "0.1.0"
edition = "2021"
description = "Part of pure-grpc-rs: a pure Rust gRPC framework with pluggable codecs"
repository = "https://github.com/Shuozeli/pure-grpc-rs"
license = "MIT"

[features]
default = ["protobuf"]
protobuf = ["protoc-rs-schema"]
flatbuffers = ["codegen-flatbuffers"]

[dependencies]
heck = "0.5"
proc-macro2 = "1"
quote = "1"
syn = "2"
prettyplease = "0.2"
thiserror = "2"

protoc-rs-schema = { git = "https://github.com/shuozeli/protobuf-rs.git", branch = "main", optional = true }
codegen-schema = { git = "https://github.com/Shuozeli/codegen-infra.git", branch = "master" }
codegen-flatbuffers = { git = "https://github.com/Shuozeli/flatbuffers-rs.git", branch = "main", optional = true }
codegen-core = { git = "https://github.com/Shuozeli/codegen-infra.git", branch = "master" }

[dev-dependencies]
