[package]
name = "grpc-core"
version = "0.1.0"
edition = "2021"
description = "Part of pure-grpc-rs: a pure Rust gRPC framework with pluggable codecs"
repository = "https://github.com/Shuozeli/pure-grpc-rs"
license = "MIT"

[features]
default = ["prost-codec"]
prost-codec = ["prost"]
gzip = ["flate2"]
deflate = ["flate2"]
zstd = ["dep:zstd"]
test-helpers = []

[dependencies]
bytes = "1"
flate2 = { version = "1", optional = true }
zstd = { version = "0.13", optional = true }
http = "1"
http-body = "1"
http-body-util = "0.1"
tokio = { version = "1", features = ["macros", "rt"] }
tokio-stream = "0.1"
futures-core = "0.3"
pin-project-lite = "0.2"
percent-encoding = "2"
base64 = "0.22"
tracing = "0.1"

prost = { version = "0.13", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
criterion = { version = "0.5", features = ["html_reports"] }
prost = "0.13"

[[bench]]
name = "codec_bench"
harness = false
required-features = ["prost-codec"]
