[package]
name = "grpc-reflection"
version = "0.1.0"
edition = "2021"
description = "Part of pure-grpc-rs: a pure Rust gRPC framework with pluggable codecs"
repository = "https://github.com/Shuozeli/pure-grpc-rs"
license = "MIT"

[features]
default = ["prost-codec"]
prost-codec = ["prost", "prost-types", "grpc-core/prost-codec"]

[dependencies]
grpc-core = { path = "../grpc-core", default-features = false }
grpc-server = { path = "../grpc-server" }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
bytes = "1"
http = "1"
http-body = "1"
tower-service = "0.3"
tokio = { version = "1", features = ["sync"] }
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
