[package]
name = "grpc-types"
version = "0.1.0"
edition = "2021"
description = "Part of pure-grpc-rs: google.rpc rich error detail types"
repository = "https://github.com/Shuozeli/pure-grpc-rs"
license = "MIT"

[features]
default = ["prost-codec"]
prost-codec = ["prost", "prost-types", "grpc-core/prost-codec"]

[dependencies]
grpc-core = { path = "../grpc-core", version = "0.1.0", default-features = false }
prost = { version = "0.13", optional = true }
prost-types = { version = "0.13", optional = true }
bytes = "1"

[build-dependencies]
grpc-build = { path = "../grpc-build", version = "0.1.0" }

[dev-dependencies]
prost = "0.13"
prost-types = "0.13"
http = "1"
