[package]
name = "greeter-proto"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "greeter-server"
path = "src/server.rs"

[[bin]]
name = "greeter-client"
path = "src/client.rs"

[[bin]]
name = "greeter-tls-server"
path = "src/tls_server.rs"
required-features = ["tls"]

[[bin]]
name = "greeter-tls-client"
path = "src/tls_client.rs"
required-features = ["tls"]

[features]
default = []
tls = ["grpc-server/tls", "grpc-client/tls"]
h3 = ["grpc-server/h3", "grpc-client/h3"]

[dependencies]
grpc-core = { path = "../../grpc-core", version = "0.1.0" }
grpc-server = { path = "../../grpc-server", version = "0.1.0" }
grpc-client = { path = "../../grpc-client", version = "0.1.0" }
grpc-reflection = { path = "../../grpc-reflection", version = "0.1.0" }
prost = "0.13"
bytes = "1"
http = "1"
http-body = "1"
tower-service = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
grpc-health = { path = "../../grpc-health", version = "0.1.0" }
grpc-reflection = { path = "../../grpc-reflection", version = "0.1.0" }
rcgen = "0.13"

[build-dependencies]
grpc-build = { path = "../../grpc-build", version = "0.1.0" }
